# ParallelSolver

./: CMakeLists.txt  bicgstab.cu  bicgstab_cpu.cpp  bicgstab_gpu.cu  bicgstab_mpi.cpp  bicgstab_mpi_cuda.cu  bicgstab_mpi_openmp.cpp  csr_utils.cpp  csr_utils.h  main.cpp  preconditioner.cu  preconditioner_cpu.cpp  preconditioner_cpu.h  preconditioner_cuda.cu  preconditioner_cuda.h  preconditioner_mpi.cpp  preconditioner_mpi.h  spmv_kernel.cu  spmv_kernel.h  utils.cpp  utils.h
ParallelSolver/: CMakeLists.txt  ParallelSolver.cpp  ParallelSolver.h
